# swagger.json
@@ -1,9 +1,18 @@
 {
   "openapi": "3.0.0",
   "info": {
-    "title": "API de Transferências e Usuários",
+  "title": "API de Transferências e Usuários",
     "version": "1.0.0",
     "description": "API para registro, login, consulta de usuários e transferências."
+  },
+  "components": {
+    "securitySchemes": {
+      "bearerAuth": {
+        "type": "http",
+        "scheme": "bearer",
+        "bearerFormat": "JWT"
+      }
+    }
   },
   "paths": {
     "/register": {
@@ -67,6 +76,7 @@
     "/transfer": {
       "post": {
         "summary": "Realizar transferência",
+        "security": [ { "bearerAuth": [] } ],
         "requestBody": {
           "required": true,
           "content": {
@@ -85,15 +95,20 @@
         },
         "responses": {
           "201": { "description": "Transferência realizada" },
-          "400": { "description": "Erro na transferência" }
+          "400": { "description": "Erro na transferência" },
+          "401": { "description": "Token não fornecido ou inválido" },
+          "403": { "description": "Token inválido" }
         }
       }
     },
     "/transfers": {
       "get": {
         "summary": "Listar transferências",
+        "security": [ { "bearerAuth": [] } ],
         "responses": {
-          "200": { "description": "Lista de transferências" }
+          "200": { "description": "Lista de transferências" },
+          "401": { "description": "Token não fornecido ou inválido" },
+          "403": { "description": "Token inválido" }
         }
       }
     }
